--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 <body>
     <h1>FizzBuzzDOM</h1>
-    <div class="table">
-        
-    </div>
+    <div class="table"></div>
 </body>
 </html>
